charts/cf-explorer-template.yaml
---
# Source: cf-explorer/templates/consumer-schedules-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cf-ledger-consumer-schedules
  labels:
    app: cf-ledger-consumer-schedules
spec:
  selector:
    app: cf-ledger-consumer-schedules
  ports:
    - protocol: TCP
      name: api
      port: 8080
      targetPort: api
---
# Source: cf-explorer/templates/consumer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cf-ledger-consumer
  labels:
    app: cf-ledger-consumer
spec:
  selector:
    app: cf-ledger-consumer
  ports:
    - protocol: TCP
      name: api
      port: 8080
      targetPort: api
---
# Source: cf-explorer/templates/crawler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cf-ledger-crawler
  labels:
    app: cf-ledger-crawler
spec:
  selector:
    app: cf-ledger-crawler
  ports:
    - protocol: TCP
      name: api
      port: 8080
      targetPort: api
---
# Source: cf-explorer/templates/explorer-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cf-explorer-api
  labels:
    app: cf-explorer-api
spec:
  selector:
    app: cf-explorer-api
  ports:
    - protocol: TCP
      name: api
      port: 8080
      targetPort: api
  type: ClusterIP
---
# Source: cf-explorer/templates/explorer-authentication-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cf-explorer-authentication
  labels:
    app: cf-explorer-authentication
spec:
  selector:
    app: cf-explorer-authentication
  ports:
    - protocol: TCP
      name: api
      port: 8080
      targetPort: api
  type: ClusterIP
---
# Source: cf-explorer/templates/explorer-fe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cf-explorer-fe
  labels:
    app: cf-explorer-fe
spec:
  selector:
    app: cf-explorer-fe
  ports:
    - protocol: TCP
      name: api
      port: 1102
      targetPort: api
  type: ClusterIP
---
# Source: cf-explorer/templates/explorer-rewards-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cf-explorer-rewards-api
  labels:
    app: cf-explorer-rewards-api
spec:
  selector:
    app: cf-explorer-rewards-api
  ports:
    - protocol: TCP
      name: api
      port: 8080
      targetPort: api
  type: ClusterIP
---
# Source: cf-explorer/templates/explorer-db-dump.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cf-ledger-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cf-ledger-consumer
  template:
    metadata:
      labels:
        app: cf-ledger-consumer
    spec:
      containers:
        - name: cf-ledger-consumer
          image: "pro.registry.gitlab.metadata.dev.cf-deployments.org/base-infrastructure/docker-registry/cf-ledger-consumer:0.2.13"
#          command: ["bash", "-c", "sleep 999999"]
          ports:
            - name: api
              containerPort: 8080
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred
  revisionHistoryLimit: 2
---
# Source: cf-explorer/templates/consumer-schedules-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cf-ledger-consumer-schedules
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cf-ledger-consumer-schedules
  template:
    metadata:
      labels:
        app: cf-ledger-consumer-schedules
    spec:
      containers:
        - name: cf-ledger-consumer-schedules
          image: "pro.registry.gitlab.metadata.dev.cf-deployments.org/base-infrastructure/docker-registry/cf-ledger-consumer-schedules:0.2.2"

          ports:
            - name: api
              containerPort: 8080

      imagePullSecrets:
        - name: regcred
  revisionHistoryLimit: 2
---
# Source: cf-explorer/templates/crawler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cf-ledger-crawler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cf-ledger-crawler
  template:
    metadata:
      labels:
        app: cf-ledger-crawler
    spec:
      containers:
        - name: cf-ledger-crawler
          image: "pro.registry.gitlab.metadata.dev.cf-deployments.org/base-infrastructure/docker-registry/cf-ledger-crawler:0.2.6"
#          command: ["bash", "-c", "sleep 999999"]
          ports:
            - name: api
              containerPort: 8080
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred
  revisionHistoryLimit: 2
---
# Source: cf-explorer/templates/explorer-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cf-explorer-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cf-explorer-api
  template:
    metadata:
      labels:
        app: cf-explorer-api
    spec:
      containers:
        - name: cf-explorer-api
          image: "pro.registry.gitlab.metadata.dev.cf-deployments.org/base-infrastructure/docker-registry/cf-explorer-api:0.3.9"
#          command: ["bash", "-c", "sleep 999999"]
          ports:
            - name: api
              containerPort: 8080
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred
  revisionHistoryLimit: 2
---
# Source: cf-explorer/templates/explorer-authentication-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cf-explorer-authentication
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cf-explorer-authentication
  template:
    metadata:
      labels:
        app: cf-explorer-authentication
    spec:
      containers:
        - name: cf-explorer-authentication
          image: "pro.registry.gitlab.metadata.dev.cf-deployments.org/base-infrastructure/docker-registry/cf-explorer-authentication:v0.1.1-7-g2e0c779"
#          command: ["bash", "-c", "sleep 999999"]
          ports:
            - name: api
              containerPort: 8080
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred
  revisionHistoryLimit: 2
---
# Source: cf-explorer/templates/explorer-fe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cf-explorer-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cf-explorer-fe
  template:
    metadata:
      labels:
        app: cf-explorer-fe
    spec:
      containers:
        - name: cf-explorer-fe
          image: "pro.registry.gitlab.metadata.dev.cf-deployments.org/base-infrastructure/docker-registry/cf-explorer-frontend:0.3.2"
#          command: ["bash", "-c", "sleep 999999"]
          ports:
            - name: api
              containerPort: 1102
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred
  revisionHistoryLimit: 2
---
# Source: cf-explorer/templates/explorer-rewards-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cf-explorer-rewards-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cf-explorer-rewards-api
  template:
    metadata:
      labels:
        app: cf-explorer-rewards-api
    spec:
      containers:
        - name: cf-explorer-rewards-api
          image: "pro.registry.gitlab.metadata.dev.cf-deployments.org/base-infrastructure/docker-registry/cf-explorer-rewards:0.1.1-SNAPSHOT"
          ports:
            - name: api
              containerPort: 8080
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred
  revisionHistoryLimit: 2
---
# Source: cf-explorer/templates/explorer-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cf-explorer-api
spec:
  rules:
    - host: api.
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cf-explorer-api
                port:
                  number: 8080
  tls:
    - hosts:
        - api.
---
# Source: cf-explorer/templates/explorer-authentication-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cf-explorer-authentication
spec:
  rules:
    - host: auth-api.
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cf-explorer-authentication
                port:
                  number: 8080
  tls:
    - hosts:
        - api.
---
# Source: cf-explorer/templates/explorer-fe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cf-explorer-fe
spec:
  rules:
    - host: 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cf-explorer-fe
                port:
                  number: 1102
  tls:
    - hosts:
        -
---
# Source: cf-explorer/templates/explorer-rewards-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cf-explorer-rewards-api
spec:
  rules:
    - host: rewards-api.
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cf-explorer-rewards-api
                port:
                  number: 8080
  tls:
    - hosts:
        - api.
